--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
-    <script src="scripts/script.js" defer></script>
+    <title>Shooter</title>
+    <script type="text/javascript" src="scripts/script.js" defer></script>
 </head>
 <body>
     <div id="main-play-area">
-        <img class='player' src="images/hero.png" alt="player character">
+        <img class="player-shooter" src="./img/hero.png" alt="hero">
+        <h4 class="game-instructions">
+            Não deixe os inimigos invadirem o seu planeta!
+        </h4>
+        <div class="start-button">
+            <h1>START</h1>
+        </div>
     </div>
 </body>
 </html>
